--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------------------------------------------------------------
- 
+
  @package: Sadaka
  @author: Ouarmedia/Farouk BLALOU
  @version: 1.0
- 
+
  --------------------------------------------------------------------------------------------------------------------- */
 
 /* =============================================================================
@@ -31,7 +31,7 @@ a:hover, a:focus, a:active {
 /* =============================================================================
   Layout
 ========================================================================== */
-/* Header 
+/* Header
 ================================= */
 .navbar-static-top {
   margin: 0;
@@ -120,7 +120,7 @@ a:hover, a:focus, a:active {
   background: #fff;
 }
 
-/* Home Slider 
+/* Home Slider
 ================================= */
 .carousel-home img {
   width: 100%;
@@ -167,14 +167,14 @@ a:hover, a:focus, a:active {
   margin: 30px 0;
 }
 
-/* home/ about-us 
+/* home/ about-us
 ================================= */
 .about-us {
   margin: 30px 0;
 }
 
 .about-us-col {
-  height: 325px;
+  height: 200px;
   padding: 25px;
   text-align: center;
   background-color: #0076a3;
@@ -197,7 +197,7 @@ a:hover, a:focus, a:active {
   min-height: 80px;
 }
 
-/* home/reasons 
+/* home/reasons
 ================================= */
 .home-reasons {
   margin: 25px 0;
@@ -302,7 +302,7 @@ a:hover, a:focus, a:active {
   border-color: #144d7b;
 }
 
-/* Team 
+/* Team
 ================================= */
 .team-member {
   background: #1f76bd;
@@ -321,7 +321,7 @@ a:hover, a:focus, a:active {
   padding: 0 15px 5px;
 }
 
-/* footer 
+/* footer
 ================================= */
 .footer-top {
   background: #115c9b;
@@ -336,6 +336,7 @@ a:hover, a:focus, a:active {
   padding: 30px 0;
 }
 .main-footer .footer-title {
+  text-align: center;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
@@ -345,11 +346,10 @@ a:hover, a:focus, a:active {
   text-align: left;
 }
 .main-footer .footer-title .title-under:after {
-  margin: 0;
   background: #fff;
 }
 .main-footer .footer-content {
-  text-align: justify;
+  text-align: center;
   font-size: 13px;
 }
 .main-footer .tweet {
@@ -414,7 +414,7 @@ a:hover, a:focus, a:active {
   color: #fff;
 }
 
-/* Pages 
+/* Pages
 ================================= */
 .page-heading {
   background: url('../images/heading-bg.jpg?1428795369') no-repeat center;
@@ -436,7 +436,7 @@ a:hover, a:focus, a:active {
   margin-bottom: 50px;
 }
 
-/* Pages/Gallery 
+/* Pages/Gallery
 ================================= */
 .gallery-item {
   padding: 0;
@@ -471,7 +471,7 @@ a:hover, a:focus, a:active {
   margin-top: 7px;
 }
 
-/* contact 
+/* contact
 ================================= */
 .contact-map {
   height: 350px;
@@ -482,7 +482,7 @@ form .alert {
   display: none;
 }
 
-/* Causes 
+/* Causes
 ================================= */
 .cause-carousel {
   margin-top: 15px;
@@ -546,7 +546,7 @@ form .alert {
   margin: 5px auto;
   background: #1f76bd;
   height: 1px;
-  width: 280px;
+  width: 100%;
 }
 .title-under:after {
   content: '';
@@ -714,6 +714,18 @@ form .alert {
   transform: perspective(1.15) scale3d(1.15, 1.15, 1.15);
 }
 
+.country-list
+{
+  display: flex;
+  width: 100%;
+  -webkit-tap-highlight-color: transparent;
+  /* position relative and z-index fix webkit rendering fonts issue */
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  justify-content: center;
+}
+
 /* Ow carousel
 ================================= */
 .owl-next,
@@ -745,7 +757,6 @@ form .alert {
   left: auto;
   right: 0;
 }
-
 /* =============================================================================
 	Responsive
 ========================================================================== */
@@ -789,6 +800,7 @@ form .alert {
 
   .footer-col {
     margin-bottom: 50px;
+    text-align: center;
   }
 }
 /* Small devices (tablets, 768px and Down) */
